<resources>
    <string name="app_name">useful-photo-album</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a11y_photo_item_image" translation_description="Accessibility text for each of the photo images shown in the 'My Gallery' and 'Photo list' screens.">Picture of plant</string>
    <string name="gallery_content_description" translation_description="Content description for the clickable image to navigate to the gallery screen">Navigate to gallery screen</string>
    <string name="menu_item_share_photo" translation_description="The label for the Share menu item">Share</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_filter_by_grow_zone" translation_description="The label for the menu item to filter the displayed plants by grow zone.">Filter by grow zone</string>
    <string name="feature_detail_image_content_description" translation_description="Content description for the header / hero image that is show at the top of the photo detail screen.">Image of Write</string>
    <string name="write_empty" translation_description="Text that is shown on the 'Home Photo' screen when no writes have been added to the user's Gallery">Your photo is empty</string>
    <string name="add_photo" translation_description="Button text that prompts user to navigate to the Photo List to add photos to their empty Gallery.">Add photo</string>
    <string name="image_content_description" translation_description="Content description for the header / hero image that is show at the top of the home photo screen.">Image of write</string>
    <string name="menu_submit" translation_description="The label for the menu item to submit">Submit</string>
    <string name="title_schedule" translation_description="The title for the schedule screen where user can see their schedule for Google I/O.">Schedule</string>
    <string name="title_home" translation_description="The title for the Home screen where user can all the updates from Google I/O team.">Home</string>
    <string name="title_map" translation_description="The title for the map screen where user can see the map of the venue.">Map</string>
    <string name="title_explore_io" translation_description="The title for the Augmented reality exploration screen where the user can explore the I/O venue in AR.">Explore I/O</string>
    <string name="title_info" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>
    <plurals name="filter_event_count" translation_description="A label showing how many events match the current filters">
        <item quantity="one">%1$d Event</item>
        <item quantity="other">%1$d Events</item>
    </plurals>
    <string name="starred_and_reserved">Your starred and reserved events</string>
    <string name="starred_and_reserved_short">Your events</string>
    <string name="search_schedule_hint" translation_description="Text field hint that is shown when user has not entered a search query">Search the schedule</string>
    <string name="search_schedule_no_results" translation_description="Text that is shown if there are no search results">No results found</string>
    <string name="session_duration_location" translatable="false">%1s / %2s</string>
    <string name="agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>
    <string name="agenda_duration" translatable="false">%1$s – %2$s</string>
    <string name="event_starred" translation_description="The message shown when user adds an event to their schedule.">Event added to your starred items</string>
    <string name="event_unstarred" translation_description="The message shown when user removes an event from their schedule.">Event removed from starred items</string>
    <string name="event_star_error" translation_description="The message shown for an error when user tries to add an event.">Error adding event to starred items</string>
    <string name="reservation_error" translation_description="The message shown for an error when user is trying to reserve a session attendance.">Error making changes to reservation. Wait for previous requests to finish or try again later.</string>
    <string name="reservation_request_succeeded" translation_description="The message shown when user tries to reserve a seat for a session.">Reservation requested.</string>
    <string name="reservation_cancel_succeeded" translation_description="The message shown when user has canceled their reservation for a session.">Reservation canceled: \"&lt;b>%s&lt;/b>.\"</string>
    <string name="reservation_new" translation_description="The message shown when user's reservation is confirmed by the system.">Your seat has been reserved for \"&lt;b>%s&lt;/b>\".</string>
    <string name="reservation_replaced" translation_description="The message shown when user has chosen to replace a reservation for another and it is confirmed by the system.">Event replaced.</string>
    <string name="waitlist_new" translation_description="The message shown when user is added to the waitlist of a session reservation.">You have been waitlisted.</string>
    <string name="waitlist_cancel_succeeded" translation_description="The message shown when user has canceled their reservation and was waitlisted for a session.">Removed from waitlist.</string>
    <string name="got_it" translation_description="The label for dismissing a information messages.">Got it</string>
    <string name="dont_show" translation_description="The label for opting out of in-app notification messages.">Don\'t show</string>
    <string name="reservation_denied_cutoff" translation_description="The message shown when user's reservation is denied because the session starts too soon">Reservation denied: too close to start time.</string>
    <string name="reservation_denied_clash" translation_description="The message shown when user's reservation is denied because they have reserved another event at that time">Reservation denied: clash with another reservation</string>
    <string name="reservation_denied_unknown" translation_description="The message shown when user's reservation is denied because of an unknown error">Reservation denied: unknown error.</string>
    <string name="cancellation_denied_cutoff" translation_description="The message shown when user is trying to cancel a reservation but it's denied because the session starts too soon">Cancellation denied: too close to start time.</string>
    <string name="cancellation_denied_unknown" translation_description="The message shown when user is trying to cancel a reservation but it's denied because of an unknown error">Cancellation denied: unknown error.</string>
    <string name="schedule_filters_empty" translation_description="The message shown when a schedule page is empty because no events match the current filters.">No events found.</string>
    <string name="reservation_reservable" translation_description="Label shown on events for which the user can request to reserve a seat.">Reserve seat</string>
    <string name="reservation_reserved" translation_description="Label shown on events for which the user has reserved a seat.">Reserved</string>
    <string name="reservation_waitlisted" translation_description="Label shown on events for which the user is on the waitlist.">Waitlisted</string>
    <string name="reservation_waitlist_available" translation_description="Label shown on events for which the user can join the waitlist.">Join waitlist</string>
    <string name="reservation_disabled" translation_description="Label shown on events for which the user cannot request a seat.">Reservations unavailable</string>
    <string name="reservation_pending" translation_description="Label shown on events for which a reservation request is pending.">Reservation pending</string>
    <string name="schedule_hint_title" translation_description="The title of the schedule hint dialog.">Customize your schedule</string>
    <string name="schedule_hint_star_event" translation_description="The schedule hint for the icon to star an event.">Add to your starred events</string>
    <string name="schedule_hint_reserve_session_seat" translation_description="The schedule hint for the icon to reserve a session.">Reserve a session seat</string>
    <string name="filters" translation_description="The label for the button to filter sessions by their topics, room, and so on.">Filters</string>
    <string name="category_heading_tracks" translation_description="Label in the filters panel above session topics (Android, Cloud, etc.)">Topics</string>
    <string name="category_heading_types" translation_description="Label in the filters panel above event types (Sessions, Codelabs, etc.)">Types</string>
    <string name="category_heading_levels" translation_description="Label in the filters panel above levels (Beginner, Advanced, etc.)">Levels</string>
    <string name="category_heading_dates" translation_description="Label in the filters panel above dates.">Dates</string>
    <string name="my_events" translation_description="Label for a button to show only the user's events.">My events</string>
    <string name="reset" translation_description="The label for the button to reset the filter conditions.">Reset</string>
    <string name="result_count" translation_description="A label showing how search results match current filters.">Results: %1$d</string>
    <string name="ask_question" translation_description="The label for the link to open an input form to ask a question about this session. [CHAR_LIMIT=30]">Q &amp; A</string>
    <string name="rate_session" translation_description="The label for the button to rate the session by 5 stars">Rate Session</string>
    <string name="menu_item_session_location" translation_description="The label for the location of the session.">Session location</string>
    <string name="menu_item_session_star" translation_description="The label for starring of the session.">Star session</string>
    <string name="menu_item_calendar" translation_description="The label for adding a session schedule to the user's calendar app.">Add to calendar</string>
    <string name="paragraph_delimiter" translatable="false">\n\n</string>
    <string name="feed_announcement_title" translation_description="The title of the announcements section in feed">Announcements</string>
    <string name="settings_title" translation_description="Title for the tab that shows all the settings of this app.">Settings</string>
    <string name="view_sessions_text" translation_description="Link label for viewing all sessions in schedule.">View Sessions</string>
    <string name="event_sessions_title" translation_description="Header label for general information on &quot;sessions&quot;.">Sessions</string>
    <string name="event_codelabs_title" translation_description="Header label for general information on &quot;codelabs&quot;.">Codelabs</string>
    <string name="event_sessions_description" translation_description="General information on sessions">Starting in April, in-person attendees can reserve seats for Sessions in advance of the event on the I/O website and also via the I/O mobile app (note: a portion of Session seats will be exempt from reservations and available first-come, first-served onsite). Attendance at Codelabs, App Reviews, and Office Hours is on a first-come, first-served basis onsite.</string>
    <string name="no_network_connection" translation_description="Snackbar message when there is not network connection">No internet connection.</string>
    <string name="phone_does_not_support_arcore_title" translation_description="Title to be shown when user tries to open the Explore feature with a device which does not support ARCore. [CHAR_LIMIT=500]">Your phone doesn\'t support ARCore</string>
</resources>