<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_upa"
    app:startDestination="@+id/navigation_schedule">

    <fragment
        android:id="@id/navigation_schedule"
        android:name="com.example.useful_photo_album.presentation.schedule.ScheduleTwoPaneFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule_two_pane">
    </fragment>

    <fragment
        android:id="@id/navigation_info"
        android:name="com.example.useful_photo_album.presentation.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@id/navigation_agenda"
        android:name="com.example.useful_photo_album.presentation.agenda.ui.AgendaFragment"
        android:label="@string/agenda"
        tools:layout="@layout/fragment_agenda" />

    <fragment
        android:id="@id/navigation_settings"
        android:name="com.google.samples.apps.iosched.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@id/navigation_feed"
        android:name="com.example.useful_photo_album.presentation.feed.FeedFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/to_session_detail"
            app:destination="@id/navigation_session_detail" />
        <action
            android:id="@+id/to_schedule"
            app:destination="@id/navigation_schedule" />
        <action
            android:id="@+id/to_map"
            app:destination="@id/navigation_map">
            <argument
                android:name="featureId"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
            <argument
                android:name="startTime"
                android:defaultValue="0L"
                app:argType="long" />
        </action>
        <action
            android:id="@+id/to_announcements_fragment"
            app:destination="@id/announcements_fragment"
            app:popUpTo="@id/navigation_feed" />
    </fragment>

    <fragment
        android:id="@id/navigation_map"
        android:name="com.example.useful_photo_album.presentation.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <!-- Navigation library doesn't allow nullable arguments of an enum type, so we have to use
             the enum name instead.
        -->
        <argument
            android:name="mapVariant"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="featureId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="startTime"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@id/navigation_codelabs"
        android:name="com.example.useful_photo_album.presentation.codelabs.ui.CodelabsFragment"
        android:label="@string/event_codelabs_title"
        tools:layout="@layout/fragment_codelabs">
        <action
            android:id="@+id/to_map"
            app:destination="@id/navigation_map_sublevel">
            <argument
                android:name="mapVariant"
                android:defaultValue="DAY"
                app:argType="string" />
            <argument
                android:name="featureId"
                android:defaultValue="codelabs"
                app:argType="string" />
        </action>
    </fragment>

    <!-- Map can be be shown as a non-top-level screen, e.g. when entering from Session Detail. In
         these cases the back button navigates back through the sub-level screens, so we should show
         the back/up arrow in the toolbar. We accomplish that by creating another destination using
         the same MapFragment but a different ID.
    -->
    <fragment
        android:id="@id/navigation_map_sublevel"
        android:name="com.example.useful_photo_album.presentation.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
        <!-- Unfortunately we have to duplicate the args. -->
        <argument
            android:name="mapVariant"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="featureId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="startTime"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@id/navigation_no_network_ar"
        android:name="com.example.useful_photo_album.presentation.ar.NoNetworkConnectionFragment"
        android:label="@string/no_network_connection"
        tools:layout="@layout/fragment_no_network" />

    <fragment
        android:id="@id/navigation_phone_does_not_support_arcore"
        android:name="com.example.useful_photo_album.presentation.ar.ArCoreNotSupportedFragment"
        android:label="@string/phone_does_not_support_arcore_title"
        tools:layout="@layout/fragment_arcore_not_supported" />

    <fragment
        android:id="@+id/announcements_fragment"
        android:name="com.example.useful_photo_album.presentation.feed.AnnouncementsFragment"
        android:label="@string/feed_announcement_title"
        tools:layout="@layout/fragment_announcements" />
</navigation>